--- a/frontend/pages/apply.html
+++ b/frontend/pages/apply.html
@@ -198,7 +198,7 @@
         const user = JSON.parse(sessionStorage.getItem('user'));
         const token = sessionStorage.getItem('token');
 
-        if (!token || !user || user.role !== 'seeker') {
+        if (!token || !user || (user.role !== 'seeker' && user.role !== 'admin')) {
             window.location.href = '/login';
         }
 
