--- a/frontend/pages/capture.html
+++ b/frontend/pages/capture.html
@@ -165,6 +165,7 @@
     <script src="/static/scripts/capture_v2.js"></script>
     <script src="/static/scripts/signals.js"></script>
     <script src="/static/scripts/ui.js"></script>
+    <script src="/static/scripts/modal.js"></script>
     <script>
         // Capture page logic
         const videoFeed = document.getElementById('video-feed');
@@ -214,8 +215,22 @@
 
         // Stop session handler
         btnStop.addEventListener('click', async () => {
+            // Enhancement #8: Confirmation dialog before ending session
+            const confirmed = await showConfirmModal({
+                title: 'End Session',
+                message: 'Are you sure you want to end this capture session? All recorded data will be saved.',
+                confirmText: 'End Session',
+                cancelText: 'Continue',
+                type: 'warning'
+            });
+
+            if (!confirmed) return;
+
             btnStop.textContent = 'Stopping...';
             btnStop.disabled = true;
+
+            // Fetch user from sessionStorage (not available from outer scope)
+            const user = JSON.parse(sessionStorage.getItem('user'));
 
             try {
                 // Stop UI updates and clear stream src
@@ -223,14 +238,14 @@
                 disconnectSignals();
 
                 // Stop session via API
-                const result = await stopSession(user.id);
+                const result = await stopSession(user.id.toString());
                 console.log('Session stopped:', result);
 
                 // Stop heartbeat
                 stopHeartbeat();
 
                 // Get summary for next page
-                const summary = await getSessionSummary(user.id);
+                const summary = await getSessionSummary(user.id.toString());
                 storeSessionData('summary', summary);
 
                 // Clear active application to prevent re-capture
